<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".fragments.IntroBasicDetailsFragment">

    <LinearLayout
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your details"
            android:textColor="#1A1C29"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="Lorem ipsum dolor sit amet, adipiscing elit, sed eiusmod tempor incididunt."
            android:textColor="#797979"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvHeaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What's your name?"
            android:layout_marginVertical="12dp"
            android:textColor="#1A1C29"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="First Name"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:textColorHint="#797979"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHeaderGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What's your gender?"
            android:layout_marginVertical="12dp"
            android:textColor="#1A1C29"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/gender_male" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/gender_female" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/gender_na" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvHeaderAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="What's your age?"
            android:textColor="#1A1C29"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/age_18_24" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/age_25_34" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/age_35_44" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/age_45_54" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/age_55_64" />

            <com.google.android.material.chip.Chip

                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/age_65_plus" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/btnIncomeContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_btn_rounded_full"
        android:gravity="center"
        android:text="Continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>